<resources>
    <string name="app_name">Claysol</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="Fill_up_the_space">Fill up the space</string>
    <string name="login">Login</string>
    <string name="i_am_also_here">I am also Here</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_an_account">Have an Account</string>
    <string name="facebookbutton">facebookButton</string>
    <string name="googlebutton">googleButton</string>
    <string name="create_account">Create Account</string>
    <string name="enter_the_otp_below">Enter the OTP Below</string>
    <string name="code">CODE</string>
    <string name="verify">Verify</string>
    <string name="your_otp_here">Your OTP Here</string>
    <string name="didn_t_receive_code">Didn\'t Receive code</string>
    <string name="resend">Resend</string>
    <string name="logout">Logout</string>
    <string name="clientId">205074269676-c7a6vbu0ue0n6g5557mlj0heqr23pgdi.apps.googleusercontent.com</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="account_user">Account User</string>
    <string name="username">Username</string>
    <string name="content_description_media">content_description_media</string>
    <string name="user">User</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="address">Address :</string>
    <string name="city_town">City/Town</string>
    <string name="state">State</string>
    <string name="pincode">Pincode</string>
    <string name="i_agree_the">I agree the <Span>Terms &amp; Conditions</Span> and <Span>Privacy Policy</Span></string>
    <string name="back_button">Back Button</string>
    <string name="save">Save</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="not_register_yet">Not register yet ?</string>
    <string name="enter_your_email_address_we_will_send_your_email_to_reset_password">Enter your Email Address, we will send your email to reset password</string>
    <string name="submit">SUBMIT</string>
    <string name="Storage_permission_denied">Oops, you Just denied the permission for storage. you can also allow it from settings</string>
    <string name="profile">Profile</string>
    <string name="hello_gmail_com">Hello@gmail.com</string>
    <string name="contact">Contact :</string>
    <string name="legal_and_terms">Legal And Terms</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="about">About</string>
    <string name="title_profile_completed">Profile Completed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_image">Profile Image</string>
    <string name="email">Email :</string>
    <string name="registerimage">registerImage</string>
    <string name="note_sorry_for_the_inconvenience_due_to_testing_please_verify_your_email_in_spam_box">NOTE: Sorry for the inconvenience due to testing, please verify your email in spam box</string>

</resources>
