<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:theme="@style/App.Theme"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".ui.VerifyActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerToolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="10dp"

        >

        <ImageButton
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:id="@+id/fgtBackBtn"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/back"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/fgtImage"
        android:layout_marginTop="40dp"
        android:src="@drawable/forgot_password_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/content_description_media" />

    <TextView
        android:id="@+id/verify_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/sfdisplaybold"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fgtImage" />

    <TextView
        android:id="@+id/Your_otp_here"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/sfdisplaythin"
        android:paddingStart="10dp"
        android:paddingEnd="20dp"
        android:text="@string/enter_your_email_address_we_will_send_your_email_to_reset_password"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verify_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fgtEmailField"
        style="@style/Widget.App.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="20dp"
        android:hint="@string/prompt_email"
        app:endIconDrawable="@drawable/ic_baseline_close_24"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black_overlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Your_otp_here"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fgtEmailInputTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:fontFamily="@font/sfdisplaybold"
        android:text="@string/submit"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:backgroundTint="@color/primaryColor"
        android:textSize="18sp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fgtEmailField" />

</androidx.constraintlayout.widget.ConstraintLayout>